--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css
-  ">
+  <link rel="stylesheet" href="css/grid_less.css">
   
   
 </head>
@@ -140,7 +139,7 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <img class="img-circle img-responsive" src="img/Logopit_1527026449800.jpg" alt="">
+              <img class="img-circle_img-responsive" src="img/Logopit_1527026449800.jpg" alt="imagen: viernes de gloria">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -157,7 +156,7 @@
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <img class="img-circle img-responsive" src="img/Una Nueva Raza 20180522_171437.jpg" alt="">
+              <img class="img-circle_img-responsive" src="img/Una Nueva Raza 20180522_171437.jpg" alt="Imagen: U N R">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -174,7 +173,7 @@
           </li>
           <li>
             <div class="timeline-image">
-              <img class="img-circle img-responsive" src="" alt="">
+              <img class="img-circle_img-responsive" src="img/SWS.jpg" alt="Imagen: domingo de adoracion">
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
